# IQA-PyTorch

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  BenchmarkCalib.md  Cold Diffusion Inverting Arbitrary Image Transforms Without Noise.md  Dataset_Preparation.md  Instruction.md  LICENSE  LICENSE-S-Lab  LICENSE_NTU-S-Lab  MANIFEST.in  Makefile  README.md  ResultsCalib.md  VERSION  benchmark_results.py  for each pytorch.md  inference_iqa.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
CalibraTest/: ckdn_imported_result.txt  ckdn_org_results.txt  dists_imported_result.txt  lpips_org_results.txt
ResultsCalibra/: MatlabReproduceNote.md  ResultsCalibra.md  ResultsCalibra_color.md  calibration_summary.csv  ckdn_imported_result.txt  gmsd_imported_result.txt  gmsd_org_result.txt  ms_ssim_imported_result.txt  ms_ssim_org_result.txt  nlpd_org_result.txt  pnsr_imported_result.txt  pnsr_org_result.txt  results_official.csv  results_original.csv  results_original_color.csv  results_ours.csv  ssim_imported_result.txt  ssim_org_result.txt
ResultsCalibra/results_compare/: brisque_imported_result.txt  brisque_org_result.txt  cw_ssim_imported_results.txt  cw_ssim_org_result.txt  fsim_imported_result.txt  fsim_org_result.txt  lpips_imported_result.txt  (+8 more)
docs/: Dataset_Preparation.md  Instruction.md  Makefile  ModelCard.md  api_entries.rst  benchmark.rst  conf.py  examples.rst  history_changelog.md  index.rst  installation.rst  metrics_implement.rst  release_notes_v0.1.15.md  requirements.txt  training_tools.rst
options/: benchmark_test.yml  default_dataset_opt.yml  example_benchmark_data_opts.yml  example_benchmark_metric_opts.yml
pyiqa/: __init__.py  api_helpers.py  dataset_info.py  default_dataset_configs.yml  default_model_configs.py  pyiqa.py  pyiqa_cmd.py  test.py  train.py  train_nsplits.py
scripts/: convert_musiq_to_pth.py  process_ava.py  process_bapps.py  process_cfgiqa.py  process_csiq.py  process_flive.py  process_gfiqa.py  process_kadid10k.py  process_koniq10k.py  process_live.py  process_livechallenge.py  process_livemd.py  process_pieapp.py  process_pipal.py  process_piq.py  process_spaq.py  process_tid.py  process_tid2013.py
tests/: Efficiency_benchmark.csv  FR_benchmark_results.csv  Face_benchmark_results.csv  IAA_benchmark_results.csv  NR_benchmark_results.csv  benchmark_results.csv  conftest.py  ffhq_score_topiq_nr-face.csv  test_datasets.py  test_datasets_general.py  test_efficiency.py  test_metric_general.py  test_metrics.py  time_benchmark.csv
(+307 files in other folders)
